# api-python

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.org  app.py  flake.nix  parameters.mk  pyproject.toml  service.py  shell.nix  test_app.py  test_service.py
