[tool.poetry]
name = "service-python-template"
version = "0.1.0"
description = ""
authors = ["David Asabina <david@asabina.de>"]
readme = "README.org"

[tool.poetry.dependencies]
python = "^3.10"
sanic = "^22.12.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
